# agentbisect

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  project.py  refund_regression.py
src/agentbisect/: __init__.py  axes.py  bisect.py  bundle.py  canonical.py  capture.py  cli.py  config.py  diff.py  driver.py  minimize.py  mock_tools.py  oracle.py  replay.py  report.py  types.py
src/agentbisect/agent/: __init__.py  fake.py  tools.py
src/agentbisect/llm/: __init__.py  backends.py
tests/: conftest.py  test_axes.py  test_bisect.py  test_bundle.py  test_canonical.py  test_cli.py  test_config.py  test_diff.py  test_driver.py  test_example.py  test_minimize.py  test_oracle.py  test_replay.py  test_report.py
