[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbisect"
version = "0.1.0"
description = "git-bisect for LLM-agent regressions: capture a failing run and binary-search prompt/model/tool versions to find the change that broke behavior."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mykola Podpriatov", email = "nsplotos@gmail.com" }]
keywords = ["llm", "agent", "bisect", "regression", "debugging", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "GitPython>=3.1",
]

[project.urls]
Homepage = "https://github.com/mykolapodpriatov/agentbisect"
Repository = "https://github.com/mykolapodpriatov/agentbisect"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentbisect = "agentbisect.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbisect"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# The package __init__ groups its public API with comments; keep that layout.
"src/agentbisect/__init__.py" = ["RUF022"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["git", "git.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["agentbisect"]
